Moved from Maven to Gradle. Replaced jAnsi with JLine3 Made a few code optimizations as suggested by IntelliJ